Implement new LTV top-level tile format (#547)
- Implement new LTV top-level tile format
- Column and field encoding unchanged
- Eliminate support for separate metadata output
- Refactor decoding methods to `MltDecoder`
- Simplify column mappings
- Remove some vectorized cruft
- Disable checking of expected files, they are not re-encoded as this is
an intermediate step